commit fin seance

--- a/lab.conf
+++ b/lab.conf
@@ -1,5 +1,5 @@
 # Images utilisées
-firewall[image]="xtrm0/quagga"
+firewall[image]="xtrm0/quagga"  # L'image du firewall
 habitant[image]="xtrm0/quagga"
 ministre[image]="xtrm0/quagga"
 banque[image]="xtrm0/quagga"
@@ -15,3 +15,5 @@ habitant[0]="LAN"
 sqlserver[0]="LAN"
 ministre[0]="LAN"
 banque[0]="LAN"
+
+
