filtrage motcles et modif filtrage sites et autorisation ministre banque

--- a/lab.conf
+++ b/lab.conf
@@ -8,6 +8,7 @@ sqlserver[image]="xtrm0/quagga"
 # Connexions réseau
 # Le firewall est le routeur central reliant le LAN et l'Internet
 firewall[0]="LAN"
+firewall[commit]=true
 firewall[bridged]=true
 
 # Machines locales connectées au LAN
